--- a/about.html
+++ b/about.html
@@ -1,89 +1,154 @@
 
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!--    CSS   -->
-      <link rel="stylesheet" href="css/bootstrap.css">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-      <title>Medical HTML Theme</title>
-   </head>
 
-   <body>
+<head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--    CSS   -->
+   <link rel="stylesheet" href="css/bootstrap.css">
+   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+   <title>Medical HTML Theme</title>
+</head>
 
-      <!--       header      -->
-
-      <div class="jumbotron">
-         <div class="container">
-            <div class="col-md-12">
-               <div class="row">
-                  <div class="col-md-1">
-                     <p>Have any questions?</p>
-                  </div>
-                  <div class="col-md-1">
-                     <p>+43 433 234 345</p>
-                  </div>
-                  <div class="col-md-1">
-                     <p>askanything@medica.com</p>
-                  </div>
-                  <div class="col-md-5"></div>
-                  <div class="col-md-4">
-                     <ul class="socialmedia">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                     </ul>
-                  </div>
+<body>
+   <!--       header      -->
+   <div class="jumbotron">
+      <div class="container">
+         <div class="col-md-12">
+            <div class="row">
+               <div class="col-md-1">
+                  <p>Have any questions?</p>
                </div>
-            </div>
-            <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#">North Medica</a>
-               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                  <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                     <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-                     <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-                     <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
+               <div class="col-md-1">
+                  <p>+43 433 234 345</p>
+               </div>
+               <div class="col-md-1">
+                  <p>askanything@medica.com</p>
+               </div>
+               <div class="col-md-5"></div>
+               <div class="col-md-4">
+                  <ul class="socialmedia">
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
-               </div>
-            </nav>
-            <div class="col-md-12">
-               <div class="row">
-                  <div class="col-md-6">
-                     <h2>1000 oportunities</h2>
-                     <h3>The easiest way to build different sites without many themes</h3>
-                     <button class="btn btn-large"></button>
-                  </div>
-                  <div class="col-md-6"></div>
                </div>
             </div>
          </div>
+         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#">North Medica</a>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+               <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                  <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+                  <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
+               </ul>
+               <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+               </form>
+            </div>
+         </nav>
+         <div class="row">
+            <div class="col-md-2">
+               <h2>About</h2></div>
+            <div class="col-md-2">Home / About Us </div>
+            <div class="col-md-8"></div>
+         </div>
       </div>
+   </div>
       <!--       /header      -->
-      <!--       section       -->
-
-
-
-
-
-
-
-
-
 
 
 
       <!--       section       -->
+
+
+<div class="container">
+   <div class="row">
+      <div class="col-md-4"><h2>Lorem ipsum.</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
+      <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
+      <div class="col-md-4"><h2>Lorem ipsum.</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
+         <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
+      <div class="col-md-4"><h2>Lorem ipsum.</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
+         <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
+   </div>
+</div>
+
+
+   <!--       section       -->
+
+<div class="container">
+   <div class="col-md-12">SEPARATOR</div>
+</div>
+
+
+      <!--       section       -->
+
+
+<div class="container">
+   <h2>Welcome to our Clinic</h2>
+   <div class="image6"></div>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae magni, dolor, iste doloremque, nemo earum cumque expedita porro, fuga molestiae laboriosam quaerat.</p>
+</div>
+
+
+
+   <!--       section       -->
+
+
+<div class="container">
+   <div class="row">
+      <div class="col-md-3">
+         <div class="icon3"> <i class="ion-medkit"></i> </div>
+         <h5>234</h5>
+         <h4>Lorem ipsum.</h4> </div>
+      <div class="col-md-3">
+         <div class="icon3"> <i class="ion-medkit"></i> </div>
+         <h5>234</h5>
+         <h4>Lorem ipsum.</h4> </div>
+      <div class="col-md-3">
+         <div class="icon3"> <i class="ion-medkit"></i> </div>
+         <h5>234</h5>
+         <h4>Lorem ipsum.</h4> </div>
+   </div>
+</div>
+
+   <!--       section       -->
+
+<div class="container">
+   <div class="row">
+      <div class="col-md-6"></div>
+      <div class="col-md-6">
+         <h2>Lorem ipsum dolor sit amet.</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
+         <p>Read more</p>
+      </div>
+   </div>
+</div>
+<div class="container">
+   <div class="row">
+      <div class="col-md-6">
+         <h2>Lorem ipsum dolor sit amet.</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
+         <p>Read more</p>
+      </div>
+      <div class="col-md-6"></div>
+   </div>
+</div>
+
+
+   <!--       section       -->
 
 
 
