--- a/index.html
+++ b/index.html
@@ -182,39 +182,39 @@
 <section class="offer">
 <div class="container">
    <div class="col-md-12">
-      <h>QUICK FACTS ABOUT OUR CLINIC</h>
+      <h3>QUICK FACTS ABOUT OUR CLINIC</h3>
       <h2><span>See what we provide for your health</span></h2>
       </div>
    <div class="col-md-12">
       <div class="row">
          <div class="col-md-4">
-            <div class="icon2"> <i class="ion-help-buoy"></i> </div>
-            <h3>Certified doctors</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h4> </div>
+            <div class="icon2"> <i class="icon-bed"></i> </div>
+            <h4>Certified doctors</h4>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h5> </div>
          <div class="col-md-4">
-            <div class="icon2"> <i class="ion-help-buoy"></i> </div>
-            <h3>Certified doctors</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h4></div>
+            <div class="icon2"> <i class="icon-users"></i> </div>
+            <h4>Certified doctors</h4>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h5></div>
          <div class="col-md-4">
-            <div class="icon2"> <i class="ion-help-buoy"></i> </div>
-            <h3>Certified doctors</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h4></div>
+            <div class="icon2"> <i class="icon-heartbeat"></i> </div>
+            <h4>Certified doctors</h4>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h5></div>
       </div>
    </div>
    <div class="col-md-12">
       <div class="row">
          <div class="col-md-4">
-            <div class="icon2"> <i class="ion-help-buoy"></i> </div>
-            <h3>Certified doctors</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h4></div>
+            <div class="icon2"> <i class="icon-leaf"></i> </div>
+            <h4>Certified doctors</h4>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h5></div>
          <div class="col-md-4">
-            <div class="icon2"> <i class="ion-help-buoy"></i> </div>
-            <h3>Certified doctors</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h4></div>
+            <div class="icon2"> <i class="icon-stethoscope"></i> </div>
+            <h4>Certified doctors</h4>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h5></div>
          <div class="col-md-4">
-            <div class="icon2"> <i class="ion-help-buoy"></i> </div>
-            <h3>Certified doctors</h3>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h4></div>
+            <div class="icon2"> <i class="icon-credit-card"></i> </div>
+            <h4>Certified doctors</h4>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a laboriosam molestias, quam officiis.</h5></div>
       </div>
    </div>
 </div>
@@ -240,7 +240,7 @@
 
 <section class="persons">
 
-<div class="container">
+<div class="container-fluid">
    <div class="col-md-6 first">
       <div class="image3"><img class="img-responsive" src="img/dent2.jpg" alt=""></div>
      <div class="wrapper">
@@ -248,13 +248,14 @@
          <h4>Lorem.</h4>
          <hr>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus adipisci voluptatum architecto maiores cum.</p>
+
+           <ul class="socialicons2">
+            <li><i class="icon-facebook"></i></li>
+            <li><i class="icon-twitter"></i></li>
+            <li><i class="icon-gplus"></i></li>
+            <li><i class="icon-linkedin"></i></li>
+         </ul>
       </div>
-      <ul class="socialicons2">
-         <li></li>
-         <li></li>
-         <li></li>
-         <li></li>
-      </ul>
    </div>
    <div class="col-md-6 first">
       <div class="image3"><img class="img-responsive" src="img/dent3.jpg" alt=""></div>
@@ -263,13 +264,14 @@
          <h4>Lorem.</h4>
          <hr>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus adipisci voluptatum architecto maiores cum.</p>
-      </div>
+
       <ul class="socialicons2">
-         <li></li>
-         <li></li>
-         <li></li>
-         <li></li>
+         <li><i class="icon-facebook"></i></li>
+         <li><i class="icon-twitter"></i></li>
+         <li><i class="icon-gplus"></i></li>
+         <li><i class="icon-linkedin"></i></li>
       </ul>
+      </div>
    </div>
 </div>
 
@@ -278,37 +280,36 @@
    <!--       section       -->
 
 
-<div class="image10">
-   <div class="container">
-      <div class="image4"></div>
+<section class="heart">
+   <div class="image10">
+      <div class="container">
+         <div class="image4"><img src="img/heart.png" alt=""></div>
+      </div>
    </div>
-   </div>
-
-
+</section>
    <!--       section       -->
 
 
 
-
-<div class="container-fluid">
-   <div class="row">
-      <div class="col-md-9"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, commodi!</p></div>
-      <div class="col-md-9">
-         <ul class="socialmedia3">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-         </ul>
+<footer>
+   <div class="container-fluid">
+      <div class="row">
+         <div class="col-md-5"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Culpa, commodi!</span></p></div>
+         <div class="col-md-4">
+            <ul class="socialmedia3">
+               <li><i class="icon-facebook"></i></li>
+               <li><i class="icon-gplus"></i></li>
+               <li><i class="icon-youtube"></i></li>
+               <li><i class="icon-twitter"></i></li>
+               <li><i class="icon-vimeo"></i></li>
+               <li><i class="icon-pinterest"></i></li>
+               <li><i class="icon-linkedin"></i></li>
+            </ul>
+         </div>
       </div>
    </div>
-</div>
 
-
+   </footer>
 
 
 
