--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 <section class="details">
      <div class="container">
       <div class="row">
-         <div class="col-md-6"></div>
+         <div class="col-md-6"><img src="img/Ballicons3/SVG/workplace.svg" alt=""></div>
          <div class="col-md-6">
             <h2>Lorem ipsum dolor sit amet.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
@@ -163,7 +163,17 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
             <p>Read more</p>
          </div>
-         <div class="col-md-6"></div>
+         <div class="col-md-6"><img src="img/Ballicons3/SVG/recycling.svg" alt=""></div>
+      </div>
+   </div>
+   <div class="container">
+      <div class="row">
+         <div class="col-md-6"><img src="img/Ballicons3/SVG/paper_plane.svg" alt=""></div>
+         <div class="col-md-6">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
+            <p>Read more</p>
+         </div>
       </div>
    </div>
    </section>
