--- a/about.html
+++ b/about.html
@@ -50,8 +50,9 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                   <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-                  <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-                  <li class="nav-item"> <a class="nav-link" href="#">Disabled</a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="#">What we offer</a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="#">Appointment</a> </li>
                </ul>
                <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="text" placeholder="Search">
