--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="css/fontello.css">
    <link rel="stylesheet" href="css/reset.css">
    <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto:300,400" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <title>Medical HTML Theme</title>
 </head>
 
@@ -47,13 +48,13 @@
          </div>
       </div>
       <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#"><img src="img/logo.JPG" alt="">&nbsp;North Medica</a>
+         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="index.html"><img src="img/logo.JPG" alt="">&nbsp;North Medica</a>
          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-               <li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="#">What we offer</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="#">Appointment</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="about.html">About Us</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="offer.html">What we offer</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="contact.html">Appointment</a> </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -74,7 +75,12 @@
          </div>
       </div>
    </div>
-</div>
+
+
+  <img class="dentist" src="img/dentist.png" alt="">
+
+
+  </div>
    <!--       /header      -->
 
 
@@ -84,7 +90,7 @@
 
 <div class="container">
    <h1><span><i class="icon-right-dir"></i></span>The highest standard of health care <span><i class="icon-left-dir"></i></span></h1>
-   <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum quasi est nobis, pariatur nesciunt dolorum!</h5>
+   <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum quasi est nobis, dolorum!</h5>
    <div class="row">
       <div class="col-md-3">
          <div class="icon"> <span><i class="icon-stethoscope"></i></span> </div>
@@ -137,14 +143,14 @@
             <h2>Welcome to Our Clinic</h2>
             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur officia perspiciatis error ipsam facere, nam repellat saepe amet unde quos in placeat explicabo quisquam earum veniam ab fuga. At excepturi provident maiores consequatur!</h3> </div>
          <div class="col-md-3 hours">
-            <h2>Open hours</h2>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, incidunt?</h2>
-            <p>Monday - Friday</p>
-            <p><span>800 - 1600</span></p>
-            <p>Saturday</p>
-            <p><span>800 - 1600</span></p>
-            <p>Sunday</p>
-            <p><span>800 - 1600</span></p>
+            <h2><strong>Open hours</strong></h2>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, incidunt?</h3>
+            <p><strong>Monday - Friday</strong></p>
+            <p><span>8<span class="sup">00</span> - 16<span class="sup">00</span></span></p>
+            <p><strong>Saturday</strong></p>
+            <p><span>8<span class="sup">00</span> - 16<span class="sup">00</span></span></p>
+            <p><strong>Sunday</strong></p>
+            <p><span>8<span class="sup">00</span> - 16<span class="sup">00</span></span></p>
          </div>
          <div class="col-md-3 address">
             <h2>Get in touch</h2>
