--- a/offer.html
+++ b/offer.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/fontello.css">
       <link rel="stylesheet" href="css/reset.css">
+      <link rel="stylesheet" href="css/media-queries.css">
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto:300,400" rel="stylesheet">
       <title>Medical HTML Theme</title>
    </head>
@@ -51,17 +52,29 @@
                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="index.html"><img src="img/logo.JPG" alt="">&nbsp;North Medica</a>
                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                     <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+                     <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
                      <li class="nav-item"> <a class="nav-link" href="about.html">About Us</a> </li>
                      <li class="nav-item"> <a class="nav-link" href="offer.html">What we offer</a> </li>
                      <li class="nav-item"> <a class="nav-link" href="contact.html">Appointment</a> </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
+                  <form class="form-inline my-2 my-lg-0 search">
                      <input class="form-control mr-sm-2" type="text" placeholder="Search">
                      <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>
                   </form>
                </div>
             </nav>
+		    <div class="col-md-12">
+			    <div class="row">
+				    <div class="col-md-12 title">
+					    <h2><span>321</span> oportunities</h2>
+					    <h3>The easiest way to build different sites without many themes</h3>
+					    <div class="btn-group">
+						    <button class="btn btn-large btn-calendar">Make an appointment</button>
+						    <button type="button" class="btn btn-large"><i class="icon-calendar"></i></button>
+					    </div>
+				    </div>
+			    </div>
+		    </div>
          </div>
           <section class="breadcrumbrs">
                  <div class="row">
@@ -77,7 +90,7 @@
 
 
 
-      <!--       section       -->
+      <!--       section    offer1   -->
 <section class="offer1">
 
 <div class="container">
@@ -88,9 +101,9 @@
          <h3>Lorem ipsum dolor sit amet.</h3>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
          <ul class="list1">
+            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet Lorem ipsum..</li>
             <li><i class="icon-check"></i>Lorem ipsum dolor sit amet.</li>
-            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet.</li>
-            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet.</li>
+            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet Lorem ipsum dolor..</li>
          </ul>
          <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary"><i class="icon-link-1"></i></button>
@@ -113,8 +126,8 @@
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
             <ul class="list1">
-               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit.</li>
-               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit.</li>
+               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit Lorem ipsum..</li>
+               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit Lorem ipsum dolor..</li>
                <li><i class="icon-right-open"></i>Lorem ipsum dolor sit.</li>
             </ul>
             <div class="btn-group" role="group" aria-label="Basic example">
@@ -212,8 +225,8 @@
 
 
       <!-- SCRIPTS -->
+      <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
       <script src="js/jquery.js"></script>
-
       <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
